Added recyclerView in history + Fixed bug if no language is detected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="requesting_toenter_text">Enter text to be translated</string>
     <string name="auto_detect">AUTO DETECT</string>
     <string name="translate">Translate</string>
-    <string name="translated_text_pointer">Translated Text</string>
+    <string name="translated_text_pointer">Translated Text \n \n </string>
     <string name="usage_instructer">Tap on the blue button to translate</string>
     <string name="requesting_patience">Please Wait</string>
     <!-- TODO: Remove or change this placeholder text -->
