--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="requesting_patience">Please Wait</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about_us">Hello, we are team_мстители. We hope you liked the app. \nFor any support or feedback contact: \nShashank Rana \nshashankrana108@outlook.com</string>
 </resources>
